--- a/config.yaml
+++ b/config.yaml
@@ -3,3 +3,6 @@ port: 5000
 nats_port: "4222"
 service_topic: "services"
 response_topic: "Responses"
+mong_url: "mongodb://localhost:27017/"
+mongo_base: "network_base"
+mongo_collection: "networks"
