fix data synhronization

--- a/config.yaml
+++ b/config.yaml
@@ -4,5 +4,5 @@ nats_port: "4222"
 service_topic: "services"
 response_topic: "Responses"
 mong_url: "mongodb://localhost:27017/"
-mongo_base: "network_base"
+mongo_base: "networksBase"
 mongo_collection: "networks"
