--- a/DockerfileApi
+++ b/DockerfileApi
@@ -2,6 +2,7 @@
 FROM python:latest
 COPY . .
 ENV PYTHONPATH $PWD
+RUN apt-get install python-dev
 RUN pip install -r requirements.txt
 EXPOSE 5000
 CMD ["python","-u", "api/main_distributed.py"]
