--- a/DockerfileNode
+++ b/DockerfileNode
@@ -2,6 +2,7 @@
 FROM python:latest
 COPY . .
 ENV PYTHONPATH $PWD
+RUN apt-get install python-dev
 RUN pip install -r requirements.txt
 EXPOSE 4222
 CMD ["python","-u", "services/Node.py"]
