--- a/DockerfileApi
+++ b/DockerfileApi
@@ -1,8 +1,7 @@
 # Dockerfile
-FROM python:latest
+FROM  tensorflow/tensorflow:latest
 COPY . .
 ENV PYTHONPATH $PWD
-RUN apt-get install python3-dev
 RUN pip install -r requirements.txt
 EXPOSE 5000
 CMD ["python","-u", "api/main_distributed.py"]
