--- a/DockerfileApi
+++ b/DockerfileApi
@@ -1,7 +1,7 @@
 # Dockerfile
 FROM  python:latest
-COPY . app
-ENV PYTHONPATH $PWD/app
+COPY . .
+ENV PYTHONPATH $PWD
 RUN pip install -r api/requirements.txt
 EXPOSE 5000
 CMD ["python","-u", "api/main_distributed.py"]
