--- a/DockerfileApi
+++ b/DockerfileApi
@@ -1,8 +1,7 @@
 # Dockerfile
 FROM  python:latest
 COPY . .
-ENV PYTHONPATH $PWD
+ENV PYTHONPATH=$PWD
 RUN pip install -r api/requirements.txt
 EXPOSE 5000
-RUN bash -c 'echo $PYTHONPATH'
 CMD ["python","-u", "api/main_distributed.py"]
