--- a/DockerfileNode
+++ b/DockerfileNode
@@ -1,8 +1,7 @@
 # Dockerfile
 FROM  tensorflow/tensorflow:latest-py3
 COPY . .
-ENV PYTHONPATH $PWD
+ENV PYTHONPATH=$PWD
 RUN pip install -r services/requirements.txt
 EXPOSE 4222
-RUN bash -c 'echo $PYTHONPATH'
 CMD ["python","-u", "services/Node.py"]
