--- a/DockerfileApi
+++ b/DockerfileApi
@@ -1,8 +1,8 @@
 # Dockerfile
 FROM  python:latest
-COPY . .
-ENV PYTHONPATH=$PWD
-RUN pip install -r api/requirements.txt
+COPY . App
+ENV PYTHONPATH $PWD/App
+RUN pip install -r App/api/requirements.txt
 EXPOSE 5000
-ENTRYPOINT ["tail", "-f", "/dev/null"]
-#CMD ["python","-u", "api/main_distributed.py"]
+#ENTRYPOINT ["tail", "-f", "/dev/null"]
+CMD ["python", "App/api/main_distributed.py"]
