--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,11 @@
 flask_host: 0.0.0.0
-test_host: "localhost"
 port: 5000
+test_host: "localhost"
+mongo_host: "localhost"
+nats_host: "localhost"
 nats_port: "4222"
 service_topic: "services"
 response_topic: "Responses"
-mong_url: "mongodb://localhost:27017/"
+mongo_port: "27017"
 mongo_base: "networksBase"
 mongo_collection: "networks"
