--- a/tests/front_end_tests/test_config.yaml
+++ b/tests/front_end_tests/test_config.yaml
@@ -1,3 +1,3 @@
 url: 'http://localhost:3000/'
-driver_path: '../chromedriver/chromedriver.exe'
+driver_path: '../chromedriver/chromedriver'
 browser: 'chrome'
