--- a/dashboard/dashboard/package.json
+++ b/dashboard/dashboard/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "ts-sync-request": "^1.4.1",
-    "typescript": "^3.7.5"   
+    "tslint": "^6.1.1",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
