--- a/DockerfileApi
+++ b/DockerfileApi
@@ -1,7 +1,8 @@
 # Dockerfile
+ENV logs_port
 FROM  python:latest
 COPY . App
 ENV PYTHONPATH $PWD/App
 RUN pip install -r App/api/requirements.txt
-CMD ["python", "App/monitoring/logs_api.py",". &"]
+CMD ["python", "App/monitoring/logs_api.py" $logs_port, ". &"]
 CMD ["python", "App/api/main_distributed.py"]
