--- a/DockerfileApi
+++ b/DockerfileApi
@@ -4,5 +4,5 @@ FROM  python:latest
 COPY . App
 ENV PYTHONPATH $PWD/App
 RUN pip install -r App/api/requirements.txt
-CMD ["python", "App/monitoring/logs_api.py" $logs_port, ". &"]
+CMD ["python", "App/monitoring/logs_api.py $logs_port", ". &"]
 CMD ["python", "App/api/main_distributed.py"]
